[B]Version 1.1.61[/B]
Porno365 - Domain fix
Chaturbate - listing fix