@@ -1,3 +1,4 @@
 [B]Version 1.1.61[/B]
 Porno365 - Domain fix
 Chaturbate - listing fix
+xHamster - listing fix
